<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimpleOCRActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_download_train_Data" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvTrainDataList"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_train_ocr_engine" />

        <Button
            android:id="@+id/btnTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_train" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ocr_process" />

        <Button
            android:id="@+id/btnProcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_process" />

        <TextView
            android:id="@+id/tvResultShow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Show Result" />

    </LinearLayout>
</RelativeLayout>